src/core-crm/objects/Product_Ledger__c/Product_Ledger__c.object-meta.xml
<CustomObject>
    <label>Product Ledger</label>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>Product Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>