src/core-crm/objects/Product_Ledger__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Product Ledgers</relationshipLabel>
    <relationshipName>Product_Ledgers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>