src/core-crm/objects/Product_Ledger__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <label>Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Product Ledgers</relationshipLabel>
    <relationshipName>Product_Ledgers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>