src/core-crm/objects/Product_Ledger__c/fields/Course_Offering_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_End_Date__c</fullName>
    <description>Value from Course Offering End Date. Used for roll up summary in Asset object.</description>
    <formula>Course_Connection__r.hed__Course_Offering__r.hed__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Offering End Date</label>
    <type>Date</type>
</CustomField>