src/core-crm/objects/Product_Ledger__c/fields/Course_Offering_End_Date_Checker__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_End_Date_Checker__c</fullName>
    <description>Used in flow to check if Course_Offering_End_Date is today, in the future, or in the past.</description>
    <label>Course Offering End Date Checker</label>
    <length>1</length>
    <type>Text</type>
</CustomField>