src/core-crm/objects/Product_Ledger__c/fields/Offering_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Offering_End_Date__c</fullName>
    <description>End date of the Course/Program offering of the course enrollment.</description>
    <formula>Course_Connection__r.Offering_End_Date__c</formula>
    <label>Offering End Date</label>
    <type>Date</type>
</CustomField>