src/core-crm/objects/Product_Ledger__c/fields/Offering_Ended__c.field-meta.xml
<CustomField>
    <fullName>Offering_Ended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offering Ended</label>
    <type>Checkbox</type>
</CustomField>