src/core-crm/objects/Product_Ledger__c/fields/Purchased_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Price__c</fullName>
    <formula>Course_Connection__r.Purchased_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchased Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>