src/core-crm/objects/Product_Ledger__c/fields/Purchased_Price_v2__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Price_v2__c</fullName>
    <label>Purchased Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>