src/core-crm/objects/Product_Ledger__c/fields/Registration_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Registration_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Cancelled</label>
    <type>Checkbox</type>
</CustomField>